--- a/ch19-05-advanced-functions-and-closures.html
+++ b/ch19-05-advanced-functions-and-closures.html
@@ -170,7 +170,7 @@
                         <h2><a class="header" href="#進階函式與閉包" id="進階函式與閉包">進階函式與閉包</a></h2>
 <p>接下來，我們會探索函式與閉包相關的進階特色，包括函式指標和回傳閉包。</p>
 <h3><a class="header" href="#函式指標" id="函式指標">函式指標</a></h3>
-<p>我們已探討過如何將閉包傳遞給函式，其實你還可以將一般的函式傳給函式！當你想要傳遞已經定義好的函式，而不是新的閉包時，就會凸顯這個技巧好用之處。有了函式指標，就可以將函式當作其他函式的引數，而這個作為引數的函式會轉型為 <code>fn</code> 型別（小寫的 f），別和閉包特徵的 <code>Fn</code> 搞混了。這個 <code>fn</code> 型別就稱為「函式指標（function pointer）」。其語法與閉包語法類似，可用於將函式指標作為參數的型別，如範例 19-27 所示。</p>
+<p>我們已探討過如何將閉包傳遞給函式，其實你還可以將一般的函式傳給函式！當你想要傳遞已經定義好的函式，而不是新的閉包時，就會凸顯這個技巧好用之處。有了函式指標，就可以將函式當作其他函式的引數，而這個作為引數的函式會轉型為 <code>fn</code> 型別（小寫的 f），別和閉包特徵的 <code>Fn</code> 搞混了。這個 <code>fn</code> 型別就稱為<strong>函式指標（function pointer）</strong>。其語法與閉包語法類似，可用於將函式指標作為參數的型別，如範例 19-27 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn add_one(x: i32) -&gt; i32 {
     x + 1
