--- a/ch19-03-advanced-traits.html
+++ b/ch19-03-advanced-traits.html
@@ -170,7 +170,7 @@
                         <h2><a class="header" href="#進階特徵" id="進階特徵">進階特徵</a></h2>
 <p>我們在第十章<a href="ch10-02-traits.html#%E7%89%B9%E5%BE%B5-%E5%AE%9A%E7%BE%A9%E5%85%B1%E4%BA%AB%E8%A1%8C%E7%88%B2">「特徵：定義共享行爲」</a>一節首次提及特徵（trait），但和生命週期（lifetime）一樣，對其進階細節並無著墨。現在你已熟稔 Rust ，了解箇中真諦的時機已至。</p>
 <h3><a class="header" href="#利用關聯型別在特徵定義中指定佔位符型別" id="利用關聯型別在特徵定義中指定佔位符型別">利用關聯型別在特徵定義中指定佔位符型別</a></h3>
-<p><em>關聯型別（associated types）</em> 連結了一個型別佔位符（placeholder）與一個特徵，可以將這些佔位符型別使用在這些特徵所定義的方法簽名上。對特定實作來說，特徵的實作者必須指明在這個型別位置上實際會用到的型別。如此一來，我們可以定義一個特色，使用了某個型別，但直到特徵被實作之前，都不需知道實際上的型別。</p>
+<p><em>關聯型別（associated types）</em> 連結了一個型別佔位符（placeholder）與一個特徵，可以將這些佔位符型別使用在這些特徵所定義的方法簽名上。對特定實作來說，特徵的實作者必須指明在這個型別位置上會用到的具體型別。如此一來，我們可以定義一個特色，使用了某個型別，但直到特徵被實作之前，都不需知道實際上的型別。</p>
 <p>多數在本章提及的進階特色都較少使用，而關聯型別則是介於其中：他們比書中其他內容來得少用，但比本章介紹的其他特色來得更常見。</p>
 <p>一個具有關聯型別的特徵之範例是標準函式庫提供的 <code>Iterator</code> 特徵。這例子中的關聯型別叫做 <code>Item</code>，表示一型別實作 <code>Iterator</code> 特徵時，會被迭代的那些值的型別。範例 19-12 展示了在第十三章<a href="ch13-02-iterators.html#iterator-%E7%89%B9%E5%BE%B5%E8%88%87-next-%E6%96%B9%E6%B3%95">「<code>Iterator</code> 特徵與 <code>next</code> 方法」</a>一節提及的 <code>Iterator</code> 特徵定義：</p>
 <pre><pre class="playground"><code class="language-rust">
@@ -184,7 +184,7 @@
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 19-12：<code>Iterator</code> 特徵自帶一個關聯型別</span></p>
-<p><code>Item</code> 型別是個佔位符型別，<code>next</code> 方法的定義顯示它會回傳型別為 <code>Option&lt;Self::Item&gt;</code> 之值。<code>Iterator</code> 特徵的實作者會指定 <code>Item</code> 的實際型別，而 <code>next</code> 方法則會回傳一個包含這該實際型別的值的一個 <code>Option</code>。</p>
+<p><code>Item</code> 型別是個佔位符型別，<code>next</code> 方法的定義顯示它會回傳型別為 <code>Option&lt;Self::Item&gt;</code> 之值。<code>Iterator</code> 特徵的實作者會指定 <code>Item</code> 的具體型別，而 <code>next</code> 方法則會回傳一個包含該具體型別的值的一個 <code>Option</code>。</p>
 <p>關聯型別可能看起來和泛型的概念非常相似，而後者允許定義函式而不需指定該函式可以處理何種型別。那為什麼我們還需要關聯型別？</p>
 <p>讓我們透過第十三章的例子，來檢視以下兩者概念上的差異，這例子的 <code>Counter</code> 結構體（struct）實作了 <code>Iterator</code> 特徵。範例 13-21 中，我們指定的 <code>Item</code> 的型別為 <code>u32</code></p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
@@ -224,10 +224,10 @@
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 19-13: 假設使用泛型來定義 <code>Iterator</code> 特徵</span></p>
-<p>差別在於使用泛型時，如範例 19-13 所示，由於我們可以實作出 <code>Iterator&lt;String&gt; for Counter</code> 或以任意多個其他泛型型別來替 <code>Counter</code> 實作 <code>Iterator</code>，因此，必須在每個實作都標註該型別。換言之，當一特徵擁有泛型參數，一型別即可透過改變泛型型別參數（generic type parameter）的實際型別，進而實作該特徵多次。於是，當我們使用 <code>next</code> 方法時，必須提供型別標註，指名要用哪個 <code>Iterator</code> 的實作。</p>
+<p>差別在於使用泛型時，如範例 19-13 所示，由於我們可以實作出 <code>Iterator&lt;String&gt; for Counter</code> 或以任意多個其他泛型型別來替 <code>Counter</code> 實作 <code>Iterator</code>，因此，必須在每個實作都標註該型別。換言之，當一特徵擁有泛型參數，一型別即可透過改變泛型型別參數（generic type parameter）的具體型別，進而實作該特徵多次。於是，當我們使用 <code>next</code> 方法時，必須提供型別標註，指名要用哪個 <code>Iterator</code> 的實作。</p>
 <p>有了關聯型別，同個型別就不能實作同個特徵多次，所以我們不需要標註型別。範例 19-12 中的定義用上了關聯型別，因為只能擁有一個 <code>impl Iterator for Counter</code>，於是只能替 <code>Item</code> 選擇唯一一個型別。在任何地方呼叫 <code>Counter</code> 的 <code>next</code> 方法就不必再明確指定我們想要 <code>u32</code> 迭代器了。</p>
 <h3><a class="header" href="#預設泛型型別參數與運算子重載" id="預設泛型型別參數與運算子重載">預設泛型型別參數與運算子重載</a></h3>
-<p>我們可以透過泛型型別參數（generic type parameter）指定該泛型型別預設的實際型別。在預設型別可運作的情形下，這可省去實作者需要指定實際型別的勞動。替泛型型別指定預設型別的語法是在宣告泛型型別是寫稱 <code>&lt;PlaceholderType=ConcreteType&gt;</code>。</p>
+<p>我們可以透過泛型型別參數（generic type parameter）指定該泛型型別預設的具體型別。在預設型別可運作的情形下，這可省去實作者需要指定具體型別的勞動。替泛型型別指定預設型別的語法是在宣告泛型型別是寫稱 <code>&lt;PlaceholderType=ConcreteType&gt;</code>。</p>
 <p>運算子重載（operator overloading）就是一個使用這個技術的好例子。<em>運算子重載</em>是指特定情況下客製化運算子（如 <code>+</code>）的行為。</p>
 <p>Rust 不允許建立你自己的運算子或重載任意的運算子，但你可以透過實作 <code>std::ops</code> 表列出的特徵與相關的運算子，來重載特定運算與相應特徵。在範例 19-14 我們重載了 <code>+</code> 運算子，讓兩個 <code>Point</code> 實例可相加。這個功能是透過對 <code>Point</code> 結構體實作 <code>Add</code> 特徵來達成：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -270,7 +270,7 @@ fn main() {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>這段程式碼大體上看起來很眼熟：具有一個方法與一個關聯型別的特徵。新朋友是 <code>Rhs=Self</code>，這部分叫做<em>預設型別參數（default type parameter）</em>。<code>Rhs</code> 泛型參數（「右運算元 right hand side」的縮寫）定義了 <code>add</code> 方法中 <code>rhs</code> 參數的型別。若我們未在實作 <code>Add</code> 特徵時指定 <code>Rhs</code> 的實際型別，這個 <code>Rhs</code> 的型別預設會是 <code>Self</code>，也就是我們正在實作 <code>Add</code> 的型別。</p>
+<p>這段程式碼大體上看起來很眼熟：具有一個方法與一個關聯型別的特徵。新朋友是 <code>Rhs=Self</code>，這部分叫做<em>預設型別參數（default type parameter）</em>。<code>Rhs</code> 泛型參數（「右運算元 right hand side」的縮寫）定義了 <code>add</code> 方法中 <code>rhs</code> 參數的型別。若我們未在實作 <code>Add</code> 特徵時指定 <code>Rhs</code> 的具體型別，這個 <code>Rhs</code> 的型別預設會是 <code>Self</code>，也就是我們正在實作 <code>Add</code> 的型別。</p>
 <p>當我們對 <code>Point</code> 實作 <code>Add</code>，因為我們想要將兩個 <code>Point</code> 實例相加，所以用到預設的 <code>Rhs</code>。讓我們看一個實作 <code>Add</code> 的範例，如何不用預設值，轉而客製化 <code>Rhs</code>。</p>
 <p>有兩個結構體，<code>Millimeters</code> 與 <code>Meters</code>，分別儲存不同單位的值。我們想將毫米透過 <code>Add</code> 做好正確單位轉換來加至公尺，這可透過對 <code>Millimeters</code> 實作 <code>Add</code> 並將 <code>Rhs</code> 設為 <code>Meters</code> 達成，如範例 19-15。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
