deploy: 6b3ee179e34e16e9faa8c67a2a0489ea419a6f6f

--- a/print.html
+++ b/print.html
@@ -13044,14 +13044,10 @@ world.</p>
 <li>updated: 2020-09-19</li>
 </ul>
 </blockquote>
-<h2><a class="header" href="#customizing-builds-with-release-profiles" id="customizing-builds-with-release-profiles">Customizing Builds with Release Profiles</a></h2>
-<p>In Rust, <em>release profiles</em> are predefined and customizable profiles with
-different configurations that allow a programmer to have more control over
-various options for compiling code. Each profile is configured independently of
-the others.</p>
-<p>Cargo has two main profiles: the <code>dev</code> profile Cargo uses when you run <code>cargo build</code> and the <code>release</code> profile Cargo uses when you run <code>cargo build --release</code>. The <code>dev</code> profile is defined with good defaults for development,
-and the <code>release</code> profile has good defaults for release builds.</p>
-<p>These profile names might be familiar from the output of your builds:</p>
+<h2><a class="header" href="#透過發佈設定檔自訂建構" id="透過發佈設定檔自訂建構">透過發佈設定檔自訂建構</a></h2>
+<p>在 Rust 中*發佈設定檔（release profiles）*是個預先定義好並可用不同設置選項來自訂設定檔的，能讓程式設計師掌控更多選項來編譯程式碼。每個設定檔的設置彼此互相獨立。</p>
+<p>Cargo 有兩個主要的設定檔：<code>dev</code> 設定檔會在當你對 Cargo 執行 <code>cargo build</code> 時所使用；<code>release</code> 設定檔會在當你對 Cargo 執行 <code>cargo build --release</code> 時所使用。<code>dev</code> 設定檔預設定義爲適用於開發時使用，而<code>release</code> 設定檔預設定義爲適用於發佈時使用。</p>
+<p>你可能會覺得這些設定檔名稱很眼熟，因爲它們就已經顯示在輸出結果過：</p>
 <!-- manual-regeneration
 anywhere, run:
 cargo build
@@ -13063,13 +13059,8 @@ and ensure output below is accurate
 $ cargo build --release
     Finished release [optimized] target(s) in 0.0s
 </code></pre>
-<p>The <code>dev</code> and <code>release</code> shown in this build output indicate that the compiler
-is using different profiles.</p>
-<p>Cargo has default settings for each of the profiles that apply when there
-aren’t any <code>[profile.*]</code> sections in the project’s <em>Cargo.toml</em> file. By adding
-<code>[profile.*]</code> sections for any profile you want to customize, you can override
-any subset of the default settings. For example, here are the default values
-for the <code>opt-level</code> setting for the <code>dev</code> and <code>release</code> profiles:</p>
+<p>此建構輸出顯示的 <code>dev</code> 與 <code>release</code> 代表編譯器會使用不同的設定檔。</p>
+<p>當專案的 <em>Cargo.toml</em> 中沒有任何 <code>[profile.*]</code> 段落的話，Cargo 就會使用每個設定檔的預設設置。透過對你想要自訂的任何設定檔加上 <code>[profile.*]</code> 段落，你可以覆寫任何預設設定的子集。舉例來說，以下是 <code>dev</code> 與 <code>release</code> 設定檔中 <code>opt-level</code> 設定的預設數值：</p>
 <p><span class="filename">檔案名稱：Cargo.toml</span></p>
 <pre><code class="language-toml">[profile.dev]
 opt-level = 0
@@ -13077,29 +13068,21 @@ opt-level = 0
 [profile.release]
 opt-level = 3
 </code></pre>
-<p>The <code>opt-level</code> setting controls the number of optimizations Rust will apply to
-your code, with a range of 0 to 3. Applying more optimizations extends
-compiling time, so if you’re in development and compiling your code often,
-you’ll want faster compiling even if the resulting code runs slower. That is
-the reason the default <code>opt-level</code> for <code>dev</code> is <code>0</code>. When you’re ready to
-release your code, it’s best to spend more time compiling. You’ll only compile
-in release mode once, but you’ll run the compiled program many times, so
-release mode trades longer compile time for code that runs faster. That is why
-the default <code>opt-level</code> for the <code>release</code> profile is <code>3</code>.</p>
-<p>You can override any default setting by adding a different value for it in
-<em>Cargo.toml</em>. For example, if we want to use optimization level 1 in the
-development profile, we can add these two lines to our project’s <em>Cargo.toml</em>
-file:</p>
+<p><code>opt-level</code> 設定控制了 Rust 對程式碼進行優化的程度，範圍從 0 到 3。提高優化程度會增加編譯時間，所以如果你在開發過程中得時常編譯程式碼的話，你會比較想要編譯快一點，就算結果程式碼會執行的比較慢。這就是 <code>dev</code> 的 <code>opt-level</code> 預設爲 0 的原因。當你準備好要發佈你的程式碼時，則最好花多點時間來編譯。你只需要在發佈模式編譯一次，但你的編譯程式則會被執行很多次，所以發佈模式選擇花費多點編譯時間來讓程式跑得比較快。這就是 <code>release</code> 的 <code>opt-level</code> 預設爲 3 的原因。</p>
+<p>你可以在 <em>Cargo.toml</em> 加上不同的數值來覆蓋任何預設設定。舉例來說，如果我們希望在開發設定檔使用優化等級 1 的話，我們可以在專案的 <em>Cargo.toml</em> 檔案中加上這兩行：</p>
 <p><span class="filename">檔案名稱：Cargo.toml</span></p>
 <pre><code class="language-toml">[profile.dev]
 opt-level = 1
 </code></pre>
-<p>This code overrides the default setting of <code>0</code>. Now when we run <code>cargo build</code>,
-Cargo will use the defaults for the <code>dev</code> profile plus our customization to
-<code>opt-level</code>. Because we set <code>opt-level</code> to <code>1</code>, Cargo will apply more
-optimizations than the default, but not as many as in a release build.</p>
-<p>For the full list of configuration options and defaults for each profile, see
-<a href="https://doc.rust-lang.org/cargo/reference/profiles.html">Cargo’s documentation</a>.</p>
+<p>這樣就會覆蓋預設設定 <code>0</code>。現在當我們執行 <code>cargo build</code>，Cargo 就會使用 <code>dev</code> 設定檔的預設值以及我們自訂的 <code>opt-level</code>。因爲我們將 <code>opt-level</code> 設爲 <code>1</code>，Cargo 會比原本的預設進行更多優化，但沒有發佈建構那麼多。</p>
+<p>對於完整的設置選項與每個設定檔的預設列表，請查閱 <a href="https://doc.rust-lang.org/cargo/reference/profiles.html">Cargo 的技術文件</a>。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch14-01-release-profiles.md">e5ed971</a></li>
+<li>updated: 2020-09-19</li>
+</ul>
+</blockquote>
 <h2><a class="header" href="#publishing-a-crate-to-cratesio" id="publishing-a-crate-to-cratesio">Publishing a Crate to Crates.io</a></h2>
 <p>We’ve used packages from <a href="https://crates.io/">crates.io</a><!-- ignore --> as
 dependencies of our project, but you can also share your code with other people
