--- a/ch14-03-cargo-workspaces.html
+++ b/ch14-03-cargo-workspaces.html
@@ -167,32 +167,14 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#cargo-workspaces" id="cargo-workspaces">Cargo Workspaces</a></h2>
-<p>In Chapter 12, we built a package that included a binary crate and a library
-crate. As your project develops, you might find that the library crate
-continues to get bigger and you want to split up your package further into
-multiple library crates. In this situation, Cargo offers a feature called
-<em>workspaces</em> that can help manage multiple related packages that are developed
-in tandem.</p>
-<h3><a class="header" href="#creating-a-workspace" id="creating-a-workspace">Creating a Workspace</a></h3>
-<p>A <em>workspace</em> is a set of packages that share the same <em>Cargo.lock</em> and output
-directory. Let’s make a project using a workspace—we’ll use trivial code so we
-can concentrate on the structure of the workspace. There are multiple ways to
-structure a workspace; we’re going to show one common way. We’ll have a
-workspace containing a binary and two libraries. The binary, which will provide
-the main functionality, will depend on the two libraries. One library will
-provide an <code>add_one</code> function, and a second library an <code>add_two</code> function.
-These three crates will be part of the same workspace. We’ll start by creating
-a new directory for the workspace:</p>
+                        <h2><a class="header" href="#cargo-工作空間" id="cargo-工作空間">Cargo 工作空間</a></h2>
+<p>在第十二章中，我們建立的套件包含一個二進制執行檔 crate 與一個函式庫 crate。隨著專案開發，你可能會發現函式庫 crate 變得越來越大，而你可能會想要將套件拆成數個函式庫 crate。針對這種情形，Cargo 提供了一個功能叫做*工作空間（workspaces）*能來幫助管理並開發數個相關的套件。</p>
+<h3><a class="header" href="#建立工作空間" id="建立工作空間">建立工作空間</a></h3>
+<p><em>工作空間</em>是一系列的共享相同 <em>Cargo.lock</em> 與輸出目錄的套件。讓我們建立個使用工作空間的專案，我們會使用簡單的程式碼，好讓我們能專注在工作空間的架構上。組織工作空間的架構有很多種方式，我們會顯示其中一種常見的方式。我們的工作空間將會包含一個二進制執行檔與兩個函式庫。執行檔會提供主要功能，並依賴其他兩個函式庫。其中一個函式庫會提供函式 <code>add_one</code>，而另一個函式庫會提供函式 <code>add_two</code>。這三個 crate 會包含在相同的工作空間中，我們先從建立工作空間的目錄開始：</p>
 <pre><code class="language-console">$ mkdir add
 $ cd add
 </code></pre>
-<p>Next, in the <em>add</em> directory, we create the <em>Cargo.toml</em> file that will
-configure the entire workspace. This file won’t have a <code>[package]</code> section or
-the metadata we’ve seen in other <em>Cargo.toml</em> files. Instead, it will start
-with a <code>[workspace]</code> section that will allow us to add members to the workspace
-by specifying the path to the package with our binary crate; in this case,
-that path is <em>adder</em>:</p>
+<p>接著在 <em>add</em> 目錄中，我們建立會設置整個工作空間的 <em>Cargo.toml</em> 檔案。此檔案不會有 <code>[package]</code> 段落或是我們在其他 <em>Cargo.toml</em> 檔案看過的詮釋資料。反之，他會使用一個 <code>[workspace]</code> 段落作爲起始，讓我們可以透過指定二進制 crate 的套件路徑來將它加到工作空間的成員中。在此例中，我們的路徑是 <em>adder</em>：</p>
 <p><span class="filename">檔案名稱：Cargo.toml</span></p>
 <pre><code class="language-toml">[workspace]
 
@@ -200,8 +182,7 @@ members = [
     &quot;adder&quot;,
 ]
 </code></pre>
-<p>Next, we’ll create the <code>adder</code> binary crate by running <code>cargo new</code> within the
-<em>add</em> directory:</p>
+<p>接下來我們會在 <em>add</em> 目錄下執行 <code>cargo new</code> 來建立 <code>adder</code> 二進制 crate：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/output-only-01-adder-crate/add
 rm -rf adder
@@ -211,8 +192,7 @@ copy output below
 <pre><code class="language-console">$ cargo new adder
      Created binary (application) `adder` package
 </code></pre>
-<p>At this point, we can build the workspace by running <code>cargo build</code>. The files
-in your <em>add</em> directory should look like this:</p>
+<p>在這個階段，我們已經可以執行 <code>cargo build</code> 來建構工作空間。目錄 <em>add</em> 底下的檔案應該會看起來像這樣：</p>
 <pre><code class="language-text">├── Cargo.lock
 ├── Cargo.toml
 ├── adder
@@ -221,20 +201,9 @@ in your <em>add</em> directory should look like this:</p>
 │       └── main.rs
 └── target
 </code></pre>
-<p>The workspace has one <em>target</em> directory at the top level for the compiled
-artifacts to be placed into; the <code>adder</code> package doesn’t have its own <em>target</em>
-directory. Even if we were to run <code>cargo build</code> from inside the <em>adder</em>
-directory, the compiled artifacts would still end up in <em>add/target</em> rather
-than <em>add/adder/target</em>. Cargo structures the <em>target</em> directory in a workspace
-like this because the crates in a workspace are meant to depend on each other.
-If each crate had its own <em>target</em> directory, each crate would have to
-recompile each of the other crates in the workspace to have the artifacts in
-its own <em>target</em> directory. By sharing one <em>target</em> directory, the crates can
-avoid unnecessary rebuilding.</p>
-<h3><a class="header" href="#creating-the-second-package-in-the-workspace" id="creating-the-second-package-in-the-workspace">Creating the Second Package in the Workspace</a></h3>
-<p>Next, let’s create another member package in the workspace and call it <code>add-one</code>.
-Change the top-level <em>Cargo.toml</em> to specify the <em>add-one</em> path in the
-<code>members</code> list:</p>
+<p>工作空間在頂層有一個 <em>target</em> 目錄用來儲存編譯結果。<code>adder</code> 套件不會有自己的 <em>target</em> 目錄。就算我們在 <em>adder</em> 目錄底下執行 <code>cargo build</code>，編譯結果仍然會在 <em>add/target</em> 底下而非 <em>add/adder/target</em>。Cargo 之所以這樣組織工作空間的 <em>target</em> 目錄是因爲工作空間的 crate 是會彼此互相依賴的。 如果每個 crate 都有自己的 <em>target</em> 目錄，每個 crate 就得重新編譯工作空間中的其他每個 crate 才能將編譯結果放入它們自己的 <em>target</em> 目錄。共享 <em>target</em> 目錄的話，crate 可以避免不必要的重新建構。</p>
+<h3><a class="header" href="#在工作空間中建立第二個套件" id="在工作空間中建立第二個套件">在工作空間中建立第二個套件</a></h3>
+<p>接下來讓我們在工作空間中建立另一個套件成員 <code>add-one</code>。請修改頂層 <em>Cargo.toml</em> 來指定 <em>add-one</em> 的路徑到 <code>members</code> 列表中：</p>
 <p><span class="filename">檔案名稱：Cargo.toml</span></p>
 <pre><code class="language-toml">[workspace]
 
@@ -243,7 +212,7 @@ members = [
     &quot;add-one&quot;,
 ]
 </code></pre>
-<p>Then generate a new library crate named <code>add-one</code>:</p>
+<p>然後產生新的函式庫 crate <code>add-one</code>：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/output-only-02-add-one/add
 rm -rf add-one
@@ -253,7 +222,7 @@ copy output below
 <pre><code class="language-console">$ cargo new add-one --lib
      Created library `add-one` package
 </code></pre>
-<p>Your <em>add</em> directory should now have these directories and files:</p>
+<p><em>add</em> 目錄現在應該要擁有這些目錄與檔案：</p>
 <pre><code class="language-text">├── Cargo.lock
 ├── Cargo.toml
 ├── add-one
@@ -266,7 +235,7 @@ copy output below
 │       └── main.rs
 └── target
 </code></pre>
-<p>In the <em>add-one/src/lib.rs</em> file, let’s add an <code>add_one</code> function:</p>
+<p>在 <em>add-one/src/lib.rs</em> 檔案中，讓我們加上一個函式 <code>add_one</code>：</p>
 <p><span class="filename">檔案名稱：add-one/src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
@@ -276,21 +245,14 @@ copy output below
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>Now that we have another package in the workspace, we can have the <code>adder</code>
-package with our binary depend on the <code>add-one</code> package, that has our
-library. First, we’ll need to add a path dependency on <code>add-one</code> to
-<em>adder/Cargo.toml</em>.</p>
+<p>現在在我們在工作空間中有另一個套件了，我們可以讓我們 <code>adder</code> 套件的執行檔依賴擁有函式庫的 <code>add-one</code> 套件。首先，我們需要將 <code>add-one</code> 的路徑依賴加到 <em>adder/Cargo.toml</em>。</p>
 <p><span class="filename">檔案名稱：adder/Cargo.toml</span></p>
 <pre><code class="language-toml">[dependencies]
 
 add-one = { path = &quot;../add-one&quot; }
 </code></pre>
-<p>Cargo doesn’t assume that crates in a workspace will depend on each other, so
-we need to be explicit about the dependency relationships between the crates.</p>
-<p>Next, let’s use the <code>add_one</code> function from the <code>add-one</code> crate in the <code>adder</code>
-crate. Open the <em>adder/src/main.rs</em> file and add a <code>use</code> line at the top to
-bring the new <code>add-one</code> library crate into scope. Then change the <code>main</code>
-function to call the <code>add_one</code> function, as in Listing 14-7.</p>
+<p>Cargo 不會假設工作空間下的 crate 會彼此依賴，我們我們要指定 crate 彼此之間依賴的關係。</p>
+<p>接著讓我們在 <code>adder</code> 內使用 <code>add-one</code> crate 的 <code>add_one</code> 函式。開啟 <em>adder/src/main.rs</em> 檔案並在最上方加上 <code>use</code> 來將 <code>add-one</code> 函式庫引入作用域。然後變更 <code>main</code> 函式來呼叫 <code>add_one</code> 函式，如範例14-7 所示。</p>
 <p><span class="filename">檔案名稱：adder/src/main.rs</span></p>
 <pre><code class="language-rust ignore">use add_one;
 
@@ -303,10 +265,8 @@ fn main() {
     );
 }
 </code></pre>
-<p><span class="caption">範例 14-7: Using the <code>add-one</code> library crate from the 
-<code>adder</code> crate</span></p>
-<p>Let’s build the workspace by running <code>cargo build</code> in the top-level <em>add</em>
-directory!</p>
+<p><span class="caption">範例 14-7：在 <code>adder</code> crate 中使 <code>add-one</code> 函式庫 crate</span></p>
+<p>讓我們在頂層的 <em>add</em> 目錄執行 <code>cargo build</code> 來建構工作空間吧！</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/listing-14-07/add
 cargo build
@@ -317,9 +277,7 @@ copy output below; the output updating script doesn't handle subdirectories in p
    Compiling adder v0.1.0 (file:///projects/add/adder)
     Finished dev [unoptimized + debuginfo] target(s) in 0.68s
 </code></pre>
-<p>To run the binary crate from the <em>add</em> directory, we can specify which
-package in the workspace we want to run by using the <code>-p</code> argument and the
-package name with <code>cargo run</code>:</p>
+<p>要執行 <em>add</em> 目錄的二進制 crate，我們可以透過 <code>-p</code> 加上套件名稱使用 <code>cargo run</code> 來執行我們想要在工作空間中指定的套件：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/listing-14-07/add
 cargo run -p adder
@@ -330,18 +288,9 @@ copy output below; the output updating script doesn't handle subdirectories in p
      Running `target/debug/adder`
 Hello, world! 10 plus one is 11!
 </code></pre>
-<p>This runs the code in <em>adder/src/main.rs</em>, which depends on the <code>add-one</code> crate.</p>
-<h4><a class="header" href="#depending-on-an-external-package-in-a-workspace" id="depending-on-an-external-package-in-a-workspace">Depending on an External Package in a Workspace</a></h4>
-<p>Notice that the workspace has only one <em>Cargo.lock</em> file at the top level of
-the workspace rather than having a <em>Cargo.lock</em> in each crate’s directory. This
-ensures that all crates are using the same version of all dependencies. If we
-add the <code>rand</code> package to the <em>adder/Cargo.toml</em> and <em>add-one/Cargo.toml</em>
-files, Cargo will resolve both of those to one version of <code>rand</code> and record
-that in the one <em>Cargo.lock</em>. Making all crates in the workspace use the same
-dependencies means the crates in the workspace will always be compatible with
-each other. Let’s add the <code>rand</code> crate to the <code>[dependencies]</code> section in the
-<em>add-one/Cargo.toml</em> file to be able to use the <code>rand</code> crate in the <code>add-one</code>
-crate:</p>
+<p>這就會執行 <em>adder/src/main.rs</em> 的程式碼，其依賴於 <code>add-one</code> crate。</p>
+<h4><a class="header" href="#在工作空間中依賴外部套件" id="在工作空間中依賴外部套件">在工作空間中依賴外部套件</a></h4>
+<p>注意到工作空間只有在頂層有一個 <em>Cargo.lock</em> 檔案，而不是在每個 crate 目錄都有一個 <em>Cargo.lock</em>。這確保所有的 crate 都對所有的依賴使用相同的版本。如果我們加了 <code>rand</code> 套件到 <em>adder/Cargo.toml</em> 與 <em>add-one/Cargo.toml</em> 檔案中，Cargo 會將兩者的版本解析爲同一個 <code>rand</code> 版本並記錄到同個 <em>Cargo.lock</em> 中。確保工作空間所有 crate 都會使用相同依賴代表工作空間中的 crate 永遠都彼此相容。讓我們將 <code>rand</code> crate 加到 <em>add-one/Cargo.toml</em> 檔案的 <code>[dependencies]</code> 段落中，使 <code>add-one</code> crate 可以使用 <code>rand</code> crate：</p>
 <!-- When updating the version of `rand` used, also update the version of
 `rand` used in these files so they all match:
 * ch02-00-guessing-game-tutorial.md
@@ -351,9 +300,7 @@ crate:</p>
 <pre><code class="language-toml">[dependencies]
 rand = &quot;0.5.5&quot;
 </code></pre>
-<p>We can now add <code>use rand;</code> to the <em>add-one/src/lib.rs</em> file, and building the
-whole workspace by running <code>cargo build</code> in the <em>add</em> directory will bring in
-and compile the <code>rand</code> crate:</p>
+<p>我們現在就可以將 <code>use rand;</code> 加到 <em>add-one/src/lib.rs</em> 檔案中，接著在 <em>add</em> 目錄下執行 <code>cargo build</code> 來建構整個工作空間就會引入並編譯 <code>rand</code> crate：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/no-listing-03-workspace-with-external-dependency/add
 cargo build
@@ -368,11 +315,7 @@ copy output below; the output updating script doesn't handle subdirectories in p
    Compiling adder v0.1.0 (file:///projects/add/adder)
     Finished dev [unoptimized + debuginfo] target(s) in 10.18s
 </code></pre>
-<p>The top-level <em>Cargo.lock</em> now contains information about the dependency of
-<code>add-one</code> on <code>rand</code>. However, even though <code>rand</code> is used somewhere in the
-workspace, we can’t use it in other crates in the workspace unless we add
-<code>rand</code> to their <em>Cargo.toml</em> files as well. For example, if we add <code>use rand;</code>
-to the <em>adder/src/main.rs</em> file for the <code>adder</code> package, we’ll get an error:</p>
+<p>頂層的 <em>Cargo.lock</em> 現在就包含 <code>add-one</code> 有 <code>rand</code> 作爲依賴的資訊。不過就算我們能在工作空間的某處使用 <code>rand</code>，並不代表我們可以在工作空間的其他 crate 中使用它，除非它們的 <em>Cargo.toml</em> 也加上了 <code>rand</code>。舉例來說，如果我們將 <code>use rand;</code> 加到 <em>adder/src/main.rs</em> 檔案中想讓 <code>adder</code> 套件也使用的話，我們就會得到錯誤：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/output-only-03-use-rand/add
 cargo build
@@ -387,17 +330,9 @@ error[E0432]: unresolved import `rand`
 2 | use rand;
   |     ^^^^ no `rand` external crate
 </code></pre>
-<p>To fix this, edit the <em>Cargo.toml</em> file for the <code>adder</code> package and indicate
-that <code>rand</code> is a dependency for it as well. Building the <code>adder</code> package will
-add <code>rand</code> to the list of dependencies for <code>adder</code> in <em>Cargo.lock</em>, but no
-additional copies of <code>rand</code> will be downloaded. Cargo has ensured that every
-crate in every package in the workspace using the <code>rand</code> package will be
-using the same version. Using the same version of <code>rand</code> across the workspace
-saves space because we won’t have multiple copies and ensures that the crates
-in the workspace will be compatible with each other.</p>
-<h4><a class="header" href="#adding-a-test-to-a-workspace" id="adding-a-test-to-a-workspace">Adding a Test to a Workspace</a></h4>
-<p>For another enhancement, let’s add a test of the <code>add_one::add_one</code> function
-within the <code>add_one</code> crate:</p>
+<p>要修正此問題，只要修改 <code>adder</code> 套件的 <em>Cargo.toml</em> 檔案，指示它也加入 <code>rand</code> 作爲依賴就好了。這樣建構 <code>adder</code> 套件就會將在 <em>Cargo.lock</em> 中將 <code>rand</code> 加入 <code>adder</code> 的依賴，但是沒有額外的 <code>rand</code> 會被下載。Cargo 會確保工作空間中每個套件的每個 crate 都會使用相同的 <code>rand</code> 套件版本。在工作空間中使用相同版本的 <code>rand</code> 可以節省空間，因爲我們就不會重複下載並能確保工作空間中的 crate 彼此可以互相兼容。</p>
+<h4><a class="header" href="#在工作空間中新增測試" id="在工作空間中新增測試">在工作空間中新增測試</a></h4>
+<p>讓我們再進一步加入一個測試函式 <code>add_one::add_one</code> 到 <code>add_one</code> crate 之中：</p>
 <p><span class="filename">檔案名稱：add-one/src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
@@ -417,7 +352,7 @@ mod tests {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>Now run <code>cargo test</code> in the top-level <em>add</em> directory:</p>
+<p>現在在頂層的 <em>add</em> 目錄執行 <code>cargo test</code>：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/no-listing-04-workspace-with-tests/add
 cargo test
@@ -446,14 +381,8 @@ running 0 tests
 
 test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 </code></pre>
-<p>The first section of the output shows that the <code>it_works</code> test in the <code>add-one</code>
-crate passed. The next section shows that zero tests were found in the <code>adder</code>
-crate, and then the last section shows zero documentation tests were found in
-the <code>add-one</code> crate. Running <code>cargo test</code> in a workspace structured like this
-one will run the tests for all the crates in the workspace.</p>
-<p>We can also run tests for one particular crate in a workspace from the
-top-level directory by using the <code>-p</code> flag and specifying the name of the crate
-we want to test:</p>
+<p>輸出的第一個段落顯示了 <code>add-one</code> crate 中的 <code>it_works</code> 測試通過。下一個段落顯示 <code>adder</code> crate 沒有任何測試，然後最後一個段落顯示 <code>add-one</code> 中沒有任何技術文件測試。在像工作空間這樣的架構下執行 <code>cargo test</code> 就會執行工作空間內的所有 crate 測試。</p>
+<p>我們也可以在頂層目錄使用 <code>-p</code> 並指定我們想測試的 crate 名稱來測試工作空間中特定的 crate：</p>
 <!-- manual-regeneration
 cd listings/ch14-more-about-cargo/no-listing-04-workspace-with-tests/add
 cargo test -p add-one
@@ -474,18 +403,17 @@ running 0 tests
 
 test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 </code></pre>
-<p>This output shows <code>cargo test</code> only ran the tests for the <code>add-one</code> crate and
-didn’t run the <code>adder</code> crate tests.</p>
-<p>If you publish the crates in the workspace to <a href="https://crates.io/">crates.io</a>,
-each crate in the workspace will need to be published separately. The <code>cargo publish</code> command does not have an <code>--all</code> flag or a <code>-p</code> flag, so you must
-change to each crate’s directory and run <code>cargo publish</code> on each crate in the
-workspace to publish the crates.</p>
-<p>For additional practice, add an <code>add-two</code> crate to this workspace in a similar
-way as the <code>add-one</code> crate!</p>
-<p>As your project grows, consider using a workspace: it’s easier to understand
-smaller, individual components than one big blob of code. Furthermore, keeping
-the crates in a workspace can make coordination between them easier if they are
-often changed at the same time.</p>
+<p>此輸出顯示 <code>cargo test</code> 只執行了 <code>add-one</code> crate 的測試並沒有執行 <code>adder</code> crate 的測試。</p>
+<p>如果你想要發佈工作空間的 crate 到 <a href="https://crates.io/">crates.io</a>，工作空間中的每個 crate 必須分別獨自發佈。<code>cargo publish</code> 命令並沒有 <code>--all</code> 或是 <code>-p</code> 之類的選項，所以你必須移動到每個 crate 的目錄並執行 <code>cargo publish</code>，這樣工作空間中的每個 crate 才會發佈出去。</p>
+<p>之後想嘗試練習的話，你可以在工作空間中在加上 <code>add-two</code> crate，方式和 <code>add-one</code> crate 類似！</p>
+<p>隨著你的專案成長，你可以考慮使用工作空間：拆成各個小部分比一整塊大程式還更容易閱讀。再者，如果需要經常同時修改的話，將 crate 放在同個工作空間中更易於彼此的協作。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch14-03-cargo-workspaces.md">e5ed971</a></li>
+<li>updated: 2020-09-19</li>
+</ul>
+</blockquote>
 
                     </main>
 
