deploy: 1505d46dd4e7617292e0f5f1485d2cd79b62f382

--- a/ch14-05-extending-cargo.html
+++ b/ch14-05-extending-cargo.html
@@ -167,20 +167,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#extending-cargo-with-custom-commands" id="extending-cargo-with-custom-commands">Extending Cargo with Custom Commands</a></h2>
-<p>Cargo is designed so you can extend it with new subcommands without having to
-modify Cargo. If a binary in your <code>$PATH</code> is named <code>cargo-something</code>, you can
-run it as if it was a Cargo subcommand by running <code>cargo something</code>. Custom
-commands like this are also listed when you run <code>cargo --list</code>. Being able to
-use <code>cargo install</code> to install extensions and then run them just like the
-built-in Cargo tools is a super convenient benefit of Cargo’s design!</p>
-<h2><a class="header" href="#summary" id="summary">Summary</a></h2>
-<p>Sharing code with Cargo and <a href="https://crates.io/">crates.io</a><!-- ignore --> is
-part of what makes the Rust ecosystem useful for many different tasks. Rust’s
-standard library is small and stable, but crates are easy to share, use, and
-improve on a timeline different from that of the language. Don’t be shy about
-sharing code that’s useful to you on <a href="https://crates.io/">crates.io</a><!-- ignore
--->; it’s likely that it will be useful to someone else as well!</p>
+                        <h2><a class="header" href="#透過自訂命命來擴展-cargo-的功能" id="透過自訂命命來擴展-cargo-的功能">透過自訂命命來擴展 Cargo 的功能</a></h2>
+<p>Cargo 的設計能讓你在不用修改 Cargo 的情況下擴展新的子命令。如果你 <code>$PATH</code> 中有任何叫做 <code>cargo-something</code> 的二進制檔案，你就可以用像是執行 Cargo 子命令的方式 <code>cargo something</code> 來執行它。像這樣的自訂命令在你執行 <code>cargo --list</code> 時也會顯示出來。能夠透過 <code>cargo install</code> 來安裝擴展插件並有如內建 Cargo 工具般來執行使用是 Cargo 設計上的一大方便優勢！</p>
+<h2><a class="header" href="#總結" id="總結">總結</a></h2>
+<p>透過 Cargo 與 <a href="https://crates.io/">crates.io</a><!-- ignore --> 分享程式碼是讓 Rust 生態系統能適用於許多不同任務的重要部分之一。Rust 的標準函式庫既小又穩定，但是 crate 可以很容易地分享、使用，並在語言本身不同的時間線來進行改善。千萬別吝嗇於分享你認爲實用的程式碼到 <a href="https://crates.io/">crates.io</a><!-- ignore -->，其他人可能也會覺得它很有幫助！</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch14-05-extending-cargo.md">e5ed971</a></li>
+<li>updated: 2020-09-19</li>
+</ul>
+</blockquote>
 
                     </main>
 
